--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -591,12 +591,37 @@
 			<span class="ttxtx">browser.display.use_document_fonts</span></div>
 			&nbsp document fonts</td><td class="c1" id="fontDoc"></td></tr>
 		<tr><td colspan="2">[offset] unicode glyphs <sup>1</sup></td><td class="c1 mono" id="ug1"></td></tr>
-		<tr><td colspan="2">[measureText] unicode glyphs <sup>1</sup></td><td class="c1 mono" id="ug2"></td></tr>
+		<tr><td colspan="2">[textmetrics] unicode glyphs <sup>1</sup></td><td class="c1 mono" id="ug2"></td></tr>
 		<tr><td colspan="2">[<span id="labelUG">clientrect</span>] unicode glyphs <sup>1</sup></td><td class="c1 mono" id="ug3"></td></tr>
 		<tr id="togUG"><td colspan="2">[getClientRects] unicode glyphs <sup>1</sup></td><td class="c1 mono" id="ug4"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtx">gfx.downloadable_fonts.woff2.enabled<br>Firefox 68 or lower</span></div>
 			&nbsp WOFF2</td><td class="c1" id="fontWoff2"></td></tr>
+		<tr><td colspan="3" class="showhide">
+			<input id="collapseF2" class="toggle" type="checkbox" checked onchange="toggleitems(this, `F2`)">
+			<label for="collapseF2" class="lbl-toggle" id="labelF2">&#9660; show details</label>
+		</td></tr>
+		<!--textMetrics -->
+		<tr class="togF2"><td colspan="2"></td><td class="sub11">textMetrics</td></tr>
+			<tr class="togF2"><td colspan="2">width</td><td class="c1 mono" id="tm00"></td></tr>
+			<tr class="togF2"><td colspan="2">actualBoundingBoxAscent</td><td class="c1 mono" id="tm01"></td></tr>
+			<tr class="togF2"><td colspan="2">actualBoundingBoxDescent</td><td class="c1 mono" id="tm02"></td></tr>
+			<tr class="togF2"><td colspan="2">actualBoundingBoxLeft</td><td class="c1 mono" id="tm03"></td></tr>
+			<tr class="togF2"><td colspan="2">actualBoundingBoxRight</td><td class="c1 mono" id="tm04"></td></tr>
+			<tr class="togF2"><td colspan="2">alphabeticBaseline</td><td class="c1 mono" id="tm05"></td></tr>
+			<tr class="togF2"><td colspan="2">emHeightAscent</td><td class="c1 mono" id="tm06"></td></tr>
+			<tr class="togF2"><td colspan="2">emHeightDescent</td><td class="c1 mono" id="tm07"></td></tr>
+			<tr class="togF2"><td colspan="2">fontBoundingBoxAscent</td><td class="c1 mono" id="tm08"></td></tr>
+			<tr class="togF2"><td colspan="2">fontBoundingBoxDescent</td><td class="c1 mono" id="tm09"></td></tr>
+			<tr class="togF2"><td colspan="2">hangingBaseline</td><td class="c1 mono" id="tm10"></td></tr>
+			<tr class="togF2"><td colspan="2">ideographicBaseline</td><td class="c1 mono" id="tm11"></td></tr>
+			<tr class="togF2"><td colspan="3"></td></tr>
+		<!--GLYPHS -->
+		<tr class="togF2"><td colspan="2" class="sub11">[offset] unicode glyphs</td><td>
+			 <button class="btn0" onClick="copyclip(`ug10`)">[ copy to clipboard ]</button></td></tr>
+		<tr class="togF2"><td></td><td colspan="2" style="white-space: pre;" class="mono" id="ug10"></td></tr>
+		<tr class="togF2"><td colspan="3"></td></tr>
+
 		<!--WHITELIST: c2: small -->
 		<tr><td colspan="3" class="center">------</td></tr>
 		<tr><td colspan="2"><div>
@@ -630,10 +655,6 @@
 		<tr id="fontD1" class="togF1"><td colspan="2" class="sub11">font fallback [os]</td><td>
 			 <button class="btn0" onClick="copyclip(`all_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
 		<tr id="fontD2" class="togF1"><td></td><td colspan="2" class="intro" id="all_fontFBFound"></td></tr>
-		<!--GLYPHS -->
-		<tr class="togF"><td colspan="2" class="sub11">[offset] unicode glyphs</td><td>
-			 <button class="btn0" onClick="copyclip(`ug10`)">[ copy to clipboard ]</button></td></tr>
-		<tr class="togF"><td></td><td colspan="2" style="white-space: pre;" class="mono" id="ug10"></td></tr>
 		<tr class="togF"><td colspan="3"></td></tr>
 		<!--CRED-->
 		<tr><td colspan="3"><span class="no_color">code based on work by </span>
