--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -27,7 +27,7 @@
 			<div><span id="df1" style='font-family: serif;'></span></div>
 			<div><span id="df2" style='font-family: monospace;'></span></div>
 		</div>
-		<div id="drect"></div>
+		<div id="iframes"></div>
 		<div id="svgDiv"></div>
 		<div id="tScroll" style="width: 100px; height: 50px; border: 0px; overflow-y: scroll;"></div>
 	</div>
@@ -144,8 +144,6 @@
 			<div>[header] http_user_agent</div></div></td><td class="faint"></td>
 		</tr>
 		<tr><td>hash</td><td class="c mono" id="sectionUA1"></td></tr>
-		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
-			[window.open] hash</td><td class="c mono" id="sectionUA2"></td></tr>
 		<tr><td id="UA00">userAgent</td><td class="c" id="nUA00"></td></tr>
 		<tr><td id="UA01">appCodeName</td><td class="c" id="nUA01"></td></tr>
 		<tr><td id="UA02">appName</td><td class="c" id="nUA02"></td></tr>
@@ -159,10 +157,17 @@
 		<tr class="togUA" id="togUA10"><td id="UA10">vendorSub</td><td class="c" id="nUA10"></td></tr>
 		<tr class="togUA" id="togUA11"><td id="UA11"></td>
 			<td><span class="bad">that's implausible and you are now highly fingerprintable</span></td></tr>
+		<tr><td colspan="2" class="center">--- navigator checks ---</td></tr>
+		<tr><td>web worker</td><td class="faint" id="sectionUA2"></td></tr>
+		<tr><td>service worker</td><td class="faint" id="sectionUA3"></td></tr>
+		<tr><td>nested workers</td><td class="faint" id="sectionUA4"></td></tr>
+		<tr><td>[iframe] hash</td><td class="c mono" id="sectionUA5"></td></tr>
+		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
+			[window.open] hash</td><td class="c mono" id="sectionUA6"></td></tr>
 		<tr><td colspan="2" class="center">--- browser, version, os ---</td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			 <span class="ttxt">uses <b>some</b> feature<br>detection results</span></div>
-			 &nbsp hash</td><td class="c mono" id="sectionUA3"></td></tr>
+			 &nbsp hash</td><td class="c mono" id="sectionUA7"></td></tr>
 		<tr><td>[css] branding</td><td id="fdBrandingCss"></td></tr>
 		<tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
 		<tr><td>[collation] browser</td><td class="c" id="fdCollation"></td></tr>
