--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -158,9 +158,9 @@
 		<tr class="togUA" id="togUA11"><td id="UA11"></td>
 			<td><span class="bad">that's implausible and you are now highly fingerprintable</span></td></tr>
 		<tr><td colspan="2" class="center">--- navigator checks ---</td></tr>
-		<tr><td>web worker</td><td class="faint" id="sectionUA2"></td></tr>
-		<tr><td>service worker</td><td class="faint" id="sectionUA3"></td></tr>
-		<tr><td>nested workers</td><td class="faint" id="sectionUA4"></td></tr>
+		<tr><td>web worker</td><td class="c mono" id="sectionUA2"></td></tr>
+		<tr><td>service worker</td><td class="c mono" id="sectionUA3"></td></tr>
+		<tr><td>nested worker</td><td class="c mono" id="sectionUA4"></td></tr>
 		<tr><td>[iframe] hash</td><td class="c mono" id="sectionUA5"></td></tr>
 		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
 			[window.open] hash</td><td class="c mono" id="sectionUA6"></td></tr>
