--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -159,15 +159,17 @@
 			<td><span class="bad">that's implausible and you are now highly fingerprintable</span></td></tr>
 		<tr><td colspan="2" class="center">--- navigator checks ---</td></tr>
 		<tr><td>web worker</td><td class="c mono" id="sectionUA2"></td></tr>
-		<tr><td>service worker</td><td class="c mono" id="sectionUA3"></td></tr>
-		<tr><td>nested worker</td><td class="c mono" id="sectionUA4"></td></tr>
-		<tr><td>[iframe] hash</td><td class="c mono" id="sectionUA5"></td></tr>
+		<tr><td>shared worker</td><td class="c mono" id="sectionUA3"></td></tr>
+		<tr><td>service worker</td><td class="c mono" id="sectionUA4"></td></tr>
+		<tr><td>nested worker</td><td class="c mono" id="sectionUA5"></td></tr>
+		<tr><td>[iframe] hash</td><td class="c mono" id="sectionUA6"></td></tr>
+		<tr><td>[nested iframe] hash</td><td class="faint" id="sectionUA7"></td></tr>
 		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
-			[window.open] hash</td><td class="c mono" id="sectionUA6"></td></tr>
+			[window.open] hash</td><td class="c mono" id="sectionUA8"></td></tr>
 		<tr><td colspan="2" class="center">--- browser, version, os ---</td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			 <span class="ttxt">uses <b>some</b> feature<br>detection results</span></div>
-			 &nbsp hash</td><td class="c mono" id="sectionUA7"></td></tr>
+			 &nbsp hash</td><td class="c mono" id="sectionUA9"></td></tr>
 		<tr><td>[css] branding</td><td id="fdBrandingCss"></td></tr>
 		<tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
 		<tr><td>[collation] browser</td><td class="c" id="fdCollation"></td></tr>
