--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -163,7 +163,7 @@
 		<tr><td>service worker</td><td class="c mono" id="sectionUA4"></td></tr>
 		<tr><td>nested worker</td><td class="c mono" id="sectionUA5"></td></tr>
 		<tr><td>[iframe] hash</td><td class="c mono" id="sectionUA6"></td></tr>
-		<tr><td>[nested iframe] hash</td><td class="faint" id="sectionUA7"></td></tr>
+		<tr><td>[nested iframe] hash</td><td class="c mono" id="sectionUA7"></td></tr>
 		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
 			[window.open] hash</td><td class="c mono" id="sectionUA8"></td></tr>
 		<tr><td colspan="2" class="center">--- browser, version, os ---</td></tr>
