--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -723,11 +723,18 @@
 			<div class="btn-left"><button class="btn14" onClick="outputSection(`14`, `c`, `m`)">[ re-run tests ]</button></div>
 			<div>&nbsp [-moz-] colors</div></div></td><td class="c mono" id="mColorHash"></td></tr>
 		<tr><td>[system] colors</td><td class="c mono" id="sColorHash"></td></tr>
+		<tr><td>[new system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">ui.systemUsesDarkTheme</span></div>
 			&nbsp [css | matchMedia] prefers-color-scheme</td><td><span id="cssPCS">
 			</span> | <span class="c" id="mmPCS"></span></td></tr>
 		<tr><td>[css | matchMedia] prefers-reduced-motion</td><td><span id="cssPRM"></span> | <span class="c" id="mmPRM"></span></td></tr>
+		<tr><td colspan="2" class="showhide">
+			<input id="collapseCSS" class="toggle" type="checkbox" checked onchange="toggleitems(this, `CSS`)">
+			<label for="collapseCSS" class="lbl-toggle" id="labelCSS">&#9660; show details</label>
+		</td></tr>
+		<tr class="togCSS"><td>new system colors</td><td colspan="2" class="mono spaces" id="sColorHashData"></td></tr>
+		<tr class="togCSS" colspan="2"><td></td></tr>
 	</table>
 
 	<!-- ciphers.js -->
