--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -723,7 +723,7 @@
 			<div class="btn-left"><button class="btn14" onClick="outputSection(`14`, `c`, `m`)">[ re-run tests ]</button></div>
 			<div>&nbsp [-moz-] colors</div></div></td><td class="c mono" id="mColorHash"></td></tr>
 		<tr><td>[system] colors</td><td class="c mono" id="sColorHash"></td></tr>
-		<tr><td>[new system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
+		<tr><td>[CSS4 system] colors</td><td class="c mono" id="sColorHashNew"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">ui.systemUsesDarkTheme</span></div>
 			&nbsp [css | matchMedia] prefers-color-scheme</td><td><span id="cssPCS">
@@ -733,7 +733,7 @@
 			<input id="collapseCSS" class="toggle" type="checkbox" checked onchange="toggleitems(this, `CSS`)">
 			<label for="collapseCSS" class="lbl-toggle" id="labelCSS">&#9660; show details</label>
 		</td></tr>
-		<tr class="togCSS"><td>new system colors</td><td colspan="2" class="mono spaces" id="sColorHashData"></td></tr>
+		<tr class="togCSS"><td>CSS4 system colors</td><td colspan="2" class="mono spaces" id="sColorHashData"></td></tr>
 		<tr class="togCSS" colspan="2"><td></td></tr>
 	</table>
 
