--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -315,8 +315,9 @@
 			<tr class="togL"><td>[BigInt] Intl.NumberFormat</td><td class="c" id="dtf20"></td></tr>
 			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="dtf21"></td></tr>
 			<tr class="togL"><td>[currency] toLocaleString </td><td class="c" id="dtf22"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] calendar</td><td class="c" id="dtf23"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] numberingSystem</td><td class="c" id="dtf24"></td></tr>
+			<tr class="togL"><td>[Intl.DateTimeFormat] calendar</td><td class="c" id="dtf23"></td></tr>
+			<tr class="togL"><td>[DateTime | RelativeTime] numberingSystem</td>
+				<td><span class="c" id="dtf24"></span> | <span class="c" id="dtf25"></span></td></tr>
 		<!--geo-->
 		<tr class="togL"><td></td><td class="sub4">geolocation</td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
