--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -305,6 +305,7 @@
 			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="dtf10"></td></tr>
 			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dtf11"></td></tr>
 			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dtf12"></td></tr>
+			<tr class="togL"><td>[dayPeriod] Intl.DateTimeFormat</td><td class="c" id="dtf26"></td></tr>
 			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dtf13"></td></tr>
 			<tr class="togL"><td>toTimeString</td><td class="c" id="dtf14"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="dtf15"></td></tr>
