--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -305,6 +305,7 @@
 			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="dtf10"></td></tr>
 			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dtf11"></td></tr>
 			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dtf12"></td></tr>
+			<tr class="togL"><td>[relatedYear | yearName] Intl.DateTimeFormat</td><td class="c" id="dtf25"></td></tr>
 			<tr class="togL"><td>[dayPeriod] Intl.DateTimeFormat</td><td class="c" id="dtf26"></td></tr>
 			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dtf13"></td></tr>
 			<tr class="togL"><td>toTimeString</td><td class="c" id="dtf14"></td></tr>
@@ -317,8 +318,7 @@
 			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="dtf21"></td></tr>
 			<tr class="togL"><td>[currency] toLocaleString </td><td class="c" id="dtf22"></td></tr>
 			<tr class="togL"><td>[Intl.DateTimeFormat] calendar</td><td class="c" id="dtf23"></td></tr>
-			<tr class="togL"><td>[DateTime | RelativeTime] numberingSystem</td>
-				<td><span class="c" id="dtf24"></span> | <span class="c" id="dtf25"></span></td></tr>
+			<tr class="togL"><td>[DateTime | RelativeTime] numberingSystem</td><td class="c" id="dtf24"></td></tr>
 		<!--geo-->
 		<tr class="togL"><td></td><td class="sub4">geolocation</td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
