--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -611,20 +611,20 @@
 			<label for="collapseF2" class="lbl-toggle" id="labelF2">&#9660; show details</label>
 		</td></tr>
 		<!--textMetrics -->
-		<tr class="togF2"><td colspan="2"></td><td class="sub11">textMetrics</td></tr>
-			<tr class="togF2"><td colspan="2">width</td><td class="c1 mono" id="tm00"></td></tr>
-			<tr class="togF2"><td colspan="2">actualBoundingBoxAscent</td><td class="c1 mono" id="tm01"></td></tr>
-			<tr class="togF2"><td colspan="2">actualBoundingBoxDescent</td><td class="c1 mono" id="tm02"></td></tr>
-			<tr class="togF2"><td colspan="2">actualBoundingBoxLeft</td><td class="c1 mono" id="tm03"></td></tr>
-			<tr class="togF2"><td colspan="2">actualBoundingBoxRight</td><td class="c1 mono" id="tm04"></td></tr>
-			<tr class="togF2"><td colspan="2">alphabeticBaseline</td><td class="c1 mono" id="tm05"></td></tr>
-			<tr class="togF2"><td colspan="2">emHeightAscent</td><td class="c1 mono" id="tm06"></td></tr>
-			<tr class="togF2"><td colspan="2">emHeightDescent</td><td class="c1 mono" id="tm07"></td></tr>
-			<tr class="togF2"><td colspan="2">fontBoundingBoxAscent</td><td class="c1 mono" id="tm08"></td></tr>
-			<tr class="togF2"><td colspan="2">fontBoundingBoxDescent</td><td class="c1 mono" id="tm09"></td></tr>
-			<tr class="togF2"><td colspan="2">hangingBaseline</td><td class="c1 mono" id="tm10"></td></tr>
-			<tr class="togF2"><td colspan="2">ideographicBaseline</td><td class="c1 mono" id="tm11"></td></tr>
-			<tr class="togF2"><td colspan="3"></td></tr>
+		<tr class="togF2 togTM"><td colspan="2"></td><td class="sub11">textMetrics</td></tr>
+			<tr class="togF2"><td colspan="2" id="labelTM">width</td><td class="c1 mono" id="tm00"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">actualBoundingBoxAscent</td><td class="c1 mono" id="tm01"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">actualBoundingBoxDescent</td><td class="c1 mono" id="tm02"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">actualBoundingBoxLeft</td><td class="c1 mono" id="tm03"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">actualBoundingBoxRight</td><td class="c1 mono" id="tm04"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">alphabeticBaseline</td><td class="c1 mono" id="tm05"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">emHeightAscent</td><td class="c1 mono" id="tm06"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">emHeightDescent</td><td class="c1 mono" id="tm07"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">fontBoundingBoxAscent</td><td class="c1 mono" id="tm08"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">fontBoundingBoxDescent</td><td class="c1 mono" id="tm09"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">hangingBaseline</td><td class="c1 mono" id="tm10"></td></tr>
+			<tr class="togF2 togTM"><td colspan="2">ideographicBaseline</td><td class="c1 mono" id="tm11"></td></tr>
+			<tr class="togF2 togTM"><td colspan="3"></td></tr>
 		<!--GLYPHS -->
 		<tr class="togF2"><td colspan="2" class="sub11">[offset] unicode glyphs</td><td>
 			 <button class="btn0" onClick="copyclip(`ug10`)">[ copy to clipboard ]</button></td></tr>
