--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -67,7 +67,7 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#screen">Screen</a>
 			<div class="nav-up"><a href="#top">&#9650;</a></div>
-			<div class="nav-down"><a href="#useragent">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#useragentd">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn1" onClick="outputSection(`1`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -132,7 +132,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#useragent">User Agent</a>
 			<div class="nav-up"><a href="#screen">&#9650;</a></div>
-			<div class="nav-down"><a href="#math">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#mathd">&#9660;</a></div>
+			<div class="nav-right"><a name="useragentd"></a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="2" class="intro"><span class="no_color">
 			The extra <code>browser</code>, <code>version</code> & <code>os</code> tests are to show how easy it is to
@@ -229,7 +230,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#math">Math</a>
 			<div class="nav-up"><a href="#useragent">&#9650;</a></div>
-			<div class="nav-down"><a href="#language">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#languaged">&#9660;</a></div>
+			<div class="nav-right"><a name="mathd"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn3" onClick="outputSection(`3`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -265,7 +267,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#language">Language & Locale / Date/Time & Format / Geolocation</a>
 			<div class="nav-up"><a href="#math">&#9650;</a></div>
-			<div class="nav-down"><a href="#headers">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#headersd">&#9660;</a></div>
+			<div class="nav-right"><a name="languaged"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -334,7 +337,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#headers">HTTP Headers</a>
 			<div class="nav-up"><a href="#language">&#9650;</a></div>
-			<div class="nav-down"><a href="#cookies">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#cookiesd">&#9660;</a></div>
+			<div class="nav-right"><a name="headersd"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn5" onClick="outputSection(`5`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -360,7 +364,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#cookies">Cookies & Storage</a>
 			<div class="nav-up"><a href="#headers">&#9650;</a></div>
-			<div class="nav-down"><a href="#devices">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#devicesd">&#9660;</a></div>
+			<div class="nav-right"><a name="cookiesd"></a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="2" class="intro"><span class="no_color">The <code>[cookie]</code>, <code>[localStorage]</code>, 
 			<code>[sessionStorage]</code> and <code> [indexedDB]</code> tests, on each run, individually attempt to set a
@@ -404,7 +409,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#devices">Devices & Hardware</a>
 			<div class="nav-up"><a href="#cookies">&#9650;</a></div>
-			<div class="nav-down"><a href="#canvas">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#canvasd">&#9660;</a></div>
+			<div class="nav-right"><a name="devicesd"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn7" onClick="outputSection(`7`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -450,7 +456,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#canvas">Canvas</a>
 			<div class="nav-up"><a href="#devices">&#9650;</a></div>
-			<div class="nav-down"><a href="#domrect">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#domrectd">&#9660;</a></div>
+			<div class="nav-right"><a name="canvasd"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn8" onClick="outputSection(`8`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -476,7 +483,8 @@
 		<thead><tr><th colspan="8">
 			<div class="nav-title"><a href="#domrect">DOMRect</a>
 			<div class="nav-up"><a href="#canvas">&#9650;</a></div>
-			<div class="nav-down"><a href="#audio">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#audiod">&#9660;</a></div>
+			<div class="nav-right"><a name="domrectd"></a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="3"><div>
 			<div class="btn-left"><button class="btn9"  onClick="outputSection(`9`, `c1`, `m`)">[ re-run tests ]</button></div>
@@ -545,7 +553,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#audio">Audio</a>
 			<div class="nav-up"><a href="#domrect">&#9650;</a></div>
-			<div class="nav-down"><a href="#fonts">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#fontsd">&#9660;</a></div>
+			<div class="nav-right"><a name="audiod"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c1`, `m`)">[ re-run tests ]</button></div>
@@ -582,7 +591,8 @@
 		<thead><tr><th colspan="3">
 			<div class="nav-title"><a href="#fonts">Fonts</a>
 			<div class="nav-up"><a href="#audio">&#9650;</a></div>
-			<div class="nav-down"><a href="#media">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#mediad">&#9660;</a></div>
+			<div class="nav-right"><a name="fontsd"></a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="3" class="intro"><span class="no_color">We already know we can enumerate fonts: see the
 			<a target="_blank" class="blue" href="extra.html">monsta</a> test. These font list tests are more refined:
@@ -681,7 +691,8 @@
 		<thead><tr><th colspan="3">
 			<div class="nav-title"><a href="#media">Media</a>
 			<div class="nav-up"><a href="#fonts">&#9650;</a></div>
-			<div class="nav-down"><a href="#webgl">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#webgld">&#9660;</a></div>
+			<div class="nav-right"><a name="mediad"></a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="2"><div>
 			<div class="btn-left"><button class="btn12" onClick="outputSection(`12`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -705,7 +716,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#webgl">WebGL</a>
 			<div class="nav-up"><a href="#media">&#9650;</a></div>
-			<div class="nav-down"><a href="#css">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#cssd">&#9660;</a></div>
+			<div class="nav-right"><a name="webgld"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn13" onClick="outputSection(`13`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -719,7 +731,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#css">CSS</a>
 			<div class="nav-up"><a href="#webgl">&#9650;</a></div>
-			<div class="nav-down"><a href="#ciphers">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#ciphersd">&#9660;</a></div>
+			<div class="nav-right"><a name="cssd"></a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn14" onClick="outputSection(`14`, `c`, `m`)">[ re-run tests ]</button></div>
@@ -745,7 +758,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#ciphers">Ciphers / TLS</a>
 			<div class="nav-up"><a href="#css">&#9650;</a></div>
-			<div class="nav-down"><a href="#spare">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#spared">&#9660;</a></div>
+			<div class="nav-right"><a name="ciphersd"></a></div></div>
 		</th></tr></thead>
 		<tr><td>test</td><td>result</td></tr>
 	</table>
@@ -756,7 +770,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#spare">oh no, i'm empty</a>
 			<div class="nav-up"><a href="#ciphers">&#9650;</a></div>
-			<div class="nav-down"><a href="#spare2">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#spare2d">&#9660;</a></div>
+			<div class="nav-right"><a name="spared"></a></div></div>
 		</th></tr></thead>
 		<tr><td>test</td><td>result</td></tr>
 	</table>
@@ -767,7 +782,8 @@
 		<thead><tr><th colspan="2">
 			<div class="nav-title"><a href="#spare2">oh no, i'm empty as well</a>
 			<div class="nav-up"><a href="#spare">&#9650;</a></div>
-			<div class="nav-down"><a href="#misc">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#miscd">&#9660;</a></div>
+			<div class="nav-right"><a name="spare2d"></a></div></div>
 		</th></tr></thead>
 		<tr><td>test</td><td>result</td></tr>
 	</table>
@@ -778,7 +794,8 @@
 		<thead><tr><th colspan="3">
 			<div class="nav-title"><a href="#misc">Miscellaneous</a>
 			<div class="nav-up"><a href="#spare2">&#9650;</a></div>
-			<div class="nav-down"><a href="#theend">&#9660;</a></div></div>
+			<div class="nav-down"><a href="#theend">&#9660;</a></div>
+			<div class="nav-right"><a name="miscd"></a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="2"><div>
 			<div class="btn-left"><button class="btn18" onClick="outputSection(`18`, `c`, `m`)">[ re-run tests ]</button></div>
