--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -166,7 +166,7 @@
 		<tr class="hidden"><td>[iframe] hash</td><td class="c mono" id="sectionUA6"></td></tr>
 		<tr class="hidden"><td>[nested iframe] hash</td><td class="c mono" id="sectionUA7"></td></tr>
 		<tr><td><button class="btn0" onClick="goNW_UA()">[ click here ]</button>
-			[window.open] hash</td><td class="c mono" id="sectionUA8"></td></tr>
+			window.open</td><td class="c mono" id="sectionUA8"></td></tr>
 		<tr><td colspan="2" class="center">--- browser, version, os ---</td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			 <span class="ttxt">uses <b>some</b> feature<br>detection results</span></div>
@@ -824,9 +824,8 @@
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">svg.disabled</span></div>
 			&nbsp svg</td><td class="c" id="svgBasicTest"></td></tr>
-		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxt"><b>basic test</b> using<br>performance.now()</span></div>
-			&nbsp timing</td><td class="c" id="rfpperf"></td></tr>
+		<tr><td colspan="2">[performance.now] timing</td><td class="c" id="rfpperf"></td></tr>
+		<tr><td colspan="2">[PerformanceNavigationTiming] timing</td><td class="c" id="rfpperf2"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">javascript.options.wasm</span></div>
 			&nbsp webassembly</td><td class="c" id="wasm"></td></tr>
@@ -836,6 +835,7 @@
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">dom.webshare.enabled</span></div>
 			&nbsp [api] web share</td><td class="c" id="webshare"></td></tr>
+		<tr><td colspan="2">window.content</td><td class="c" id="wincon"></td></tr>
 		<tr><td colspan="3" class="center">------</td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.use_components_shim</span></div>
