--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -382,8 +382,7 @@
 		<tr><td>sessionStorage | test</td><td><span class="c" id="lstest2"></span>	| <span class="c" id="lstest3"></span></td></tr>
 		<tr><td>indexedDB | test</td><td><span class="c" id="idb1"></span>	| <span class="c" id="idb2"></span></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">browser.cache.offline.enable</span></div>&nbsp appCache | test</td>
-			<td><span class="c" id="appcache1"></span> | <span class="c" id="appcache2"></span></td></tr>
+			<span class="ttxtb">browser.cache.offline.enable</span></div>&nbsp appCache</td><td class="c" id="appcache"></td></tr>
 		<tr><td>worker</td><td class="c" id="work1"></td></tr>
 		<tr><td>web worker | shared worker</td><td>
 			<span class="c" id="work2"></span> | <span class="c" id="work3"></span></td></tr>
