--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -156,8 +156,7 @@
 		<tr><td id="UA08">productSub</td><td class="c spaces" id="nUA08"></td></tr>
 		<tr class="togUA" id="togUA09"><td id="UA09">vendor</td><td class="c spaces" id="nUA09"></td></tr>
 		<tr class="togUA" id="togUA10"><td id="UA10">vendorSub</td><td class="c spaces" id="nUA10"></td></tr>
-		<tr class="togUA" id="togUA11"><td id="UA11"></td>
-			<td><span class="bad">that's implausible and you are now highly fingerprintable</span></td></tr>
+		<tr class="togUA" id="togUA11"><td id="UA11"></td><td class="c" id="UA12"></td></tr>
 		<tr><td colspan="2" class="center">--- navigator checks ---</td></tr>
 		<tr><td>web worker</td><td class="c mono" id="sectionUA2"></td></tr>
 		<tr><td>shared worker</td><td class="c mono" id="sectionUA3"></td></tr>
