--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -862,7 +862,7 @@
 
 	<script src="js/main.js"></script>
 	<!-- first 3 sections: load first as it sets global vars-->
-	<script src="js/screen.js"></script>
+	<!-- <script src="js/screen.js"></script>-->
 	<!-- faster sections -->
 	<script src="js/language.js"></script>
 	<script src="js/headers.js"></script>
