--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -862,22 +862,22 @@
 
 	<script src="js/main.js"></script>
 	<!-- first 3 sections: load first as it sets global vars-->
-	<!-- <script src="js/screen.js"></script>-->
+	<script src="js/screen.js"></script>
 	<!-- faster sections -->
-	<script src="js/language.js"></script>
+	<!-- <script src="js/language.js"></script>
 	<script src="js/headers.js"></script>
 	<script src="js/devices.js"></script>
 	<script src="js/css.js"></script>
 	<script src="js/storage.js"></script>
 	<script src="js/misc.js"></script>
-	<script src="js/media.js"></script>
+	<script src="js/media.js"></script>-->
 	<!-- slower sections -->
-	<script src="js/canvas.js"></script>
+	<!-- <script src="js/canvas.js"></script>
 	<script src="js/fonts.js"></script>
 	<script src="js/audio.js"></script>
-	<script src="js/webgl.js"></script>
+	<script src="js/webgl.js"></script>-->
 	<!-- do domrect last -->
-	<script src="js/domrect.js"></script>
+	<!-- <script src="js/domrect.js"></script>-->
 
 	<!-- almost 500kb, load last -->
 	<link rel="stylesheet" type="text/css" href="css/media.css">
