--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -864,13 +864,13 @@
 	<!-- first 3 sections: load first as it sets global vars-->
 	<script src="js/screen.js"></script>
 	<!-- faster sections -->
-	<!-- <script src="js/language.js"></script>
+	<script src="js/language.js"></script>
 	<script src="js/headers.js"></script>
 	<script src="js/devices.js"></script>
 	<script src="js/css.js"></script>
 	<script src="js/storage.js"></script>
 	<script src="js/misc.js"></script>
-	<script src="js/media.js"></script>-->
+	<script src="js/media.js"></script>
 	<!-- slower sections -->
 	<!-- <script src="js/canvas.js"></script>
 	<script src="js/fonts.js"></script>
