--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -872,10 +872,10 @@
 	<script src="js/misc.js"></script>
 	<script src="js/media.js"></script>
 	<!-- slower sections -->
-	<!-- <script src="js/canvas.js"></script>
-	<script src="js/fonts.js"></script>
+	<script src="js/canvas.js"></script>
+	<!-- <script src="js/fonts.js"></script>-->
 	<script src="js/audio.js"></script>
-	<script src="js/webgl.js"></script>-->
+	<script src="js/webgl.js"></script>
 	<!-- do domrect last -->
 	<!-- <script src="js/domrect.js"></script>-->
 
