--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -459,17 +459,17 @@
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn8" onClick="outputSection(`8`, `c`, `m`)">[ re-run tests ]</button></div>
-			<div>getContext</div></div></td><td class="c getContext" id="cnv1"></td></tr>
-		<tr><td>toDataURL</td><td class="c toDataURL" id="cnv2"></td></tr>
-		<tr><td>toBlob</td><td class="c toBlob" id="cnv3"></td></tr>
-		<tr><td>mozGetAsFile</td><td class="c mozGetAsFile" id="cnv4"></td></tr>
-		<tr><td>getImageData</td><td class="c getImageData" id="cnv5"></td></tr>
-		<tr><td>winding</td><td class="c winding" id="cnv6"></td></tr>
-		<tr><td>isPointInPath</td><td class="c isPointInPath" id="cnv7"></td></tr>
-		<tr><td>isPointInStroke</td><td class="c isPointInStroke" id="cnv8"></td></tr>
-		<tr><td>fillText</td><td class="c fillText" id="cnv9"></td></tr>
-		<tr><td>strokeText</td><td class="c strokeText" id="cnv10"></td></tr>
-		<tr><td>[webgl] readPixels</td><td class="c readPixels" id="cnv11"></td></tr>
+			<div>getContext</div></div></td><td class="c getContext""></td></tr>
+		<tr><td>toDataURL</td><td class="c toDataURL"></td></tr>
+		<tr><td>toBlob</td><td class="c toBlob"></td></tr>
+		<tr><td>mozGetAsFile</td><td class="c mozGetAsFile"></td></tr>
+		<tr><td>getImageData</td><td class="c getImageData"></td></tr>
+		<tr><td>winding</td><td class="c winding"></td></tr>
+		<tr><td>isPointInPath</td><td class="c isPointInPath"></td></tr>
+		<tr><td>isPointInStroke</td><td class="c isPointInStroke"></td></tr>
+		<tr><td>fillText</td><td class="c fillText"></td></tr>
+		<tr><td>strokeText</td><td class="c strokeText"></td></tr>
+		<tr><td>[webgl] readPixels</td><td class="c readPixels"></td></tr>
 		<tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
 			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
@@ -863,7 +863,7 @@
 	<script src="js/main.js"></script>
 	<!-- first 3 sections: load first as it sets global vars-->
 	<script src="js/screen.js"></script>
-	<!-- faster sections -->
+	<!-- faster -->
 	<script src="js/language.js"></script>
 	<script src="js/headers.js"></script>
 	<script src="js/devices.js"></script>
@@ -871,7 +871,7 @@
 	<script src="js/storage.js"></script>
 	<script src="js/misc.js"></script>
 	<script src="js/media.js"></script>
-	<!-- slower sections -->
+	<!-- slower -->
 	<script src="js/canvas.js"></script>
 	<script src="js/fonts.js"></script>
 	<script src="js/audio.js"></script>
@@ -879,7 +879,7 @@
 	<!-- do domrect last -->
 	<script src="js/domrect.js"></script>
 
-	<!-- almost 500kb, load last -->
+	<!-- 500kb, load last -->
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<link rel="stylesheet" type="text/css" href="css/window_size.css">
 	<link rel="stylesheet" type="text/css" href="css/screen_size.css">
