--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -459,17 +459,19 @@
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn8" onClick="outputSection(`8`, `c`, `m`)">[ re-run tests ]</button></div>
-			<div>getContext</div></div></td><td class="c getContext""></td></tr>
-		<tr><td>toDataURL</td><td class="c toDataURL"></td></tr>
-		<tr><td>toBlob</td><td class="c toBlob"></td></tr>
-		<tr><td>mozGetAsFile</td><td class="c mozGetAsFile"></td></tr>
-		<tr><td>getImageData</td><td class="c getImageData"></td></tr>
-		<tr><td>winding</td><td class="c winding"></td></tr>
-		<tr><td>isPointInPath</td><td class="c isPointInPath"></td></tr>
-		<tr><td>isPointInStroke</td><td class="c isPointInStroke"></td></tr>
-		<tr><td>fillText</td><td class="c fillText"></td></tr>
-		<tr><td>strokeText</td><td class="c strokeText"></td></tr>
-		<tr><td>[webgl] readPixels</td><td class="c readPixels"></td></tr>
+			<div>canvas</div></div></td><td class="c mono" id="chash1"></td></tr>
+		<tr><td>[webgl] readPixels</td><td class="c mono readPixels"></td></tr>
+		<tr><td colspan="2" class="center">--- canvas ---</td></tr>
+		<tr><td>getContext</td><td class="c mono getContext"></td></tr>
+		<tr><td>toDataURL</td><td class="c mono toDataURL"></td></tr>
+		<tr><td>toBlob</td><td class="c mono toBlob"></td></tr>
+		<tr><td>mozGetAsFile</td><td class="c mono mozGetAsFile"></td></tr>
+		<tr><td>getImageData</td><td class="c mono getImageData"></td></tr>
+		<tr><td>winding</td><td class="c mono winding"></td></tr>
+		<tr><td>isPointInPath</td><td class="c mono isPointInPath"></td></tr>
+		<tr><td>isPointInStroke</td><td class="c mono isPointInStroke"></td></tr>
+		<tr><td>fillText</td><td class="c mono fillText"></td></tr>
+		<tr><td>strokeText</td><td class="c mono strokeText"></td></tr>
 		<tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
 			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
