--- a/iframes/domrect.html
+++ b/iframes/domrect.html
@@ -2,9 +2,11 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <head>
 <style>
-.hidden {display: none;}
-.offscreen {position: absolute; top: -2000%;}
-
+#divrect {
+  position: fixed;
+  top: 10;
+  left: 10;
+}
 #insideDOMRect{
 	white-space: nowrap;
 	color:#5B5B5B;
@@ -38,9 +40,10 @@
 </head>
 
 <body>
+<div id="divrect">
 <div id="insideDOMRect">
 <h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
-<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br />
+<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -52,6 +55,7 @@
 </select>
 <progress class="testRect" id="rect4">test</progress>
 <button class="testRect" id="rect5"></button>
-<div id="rect6">test</div>
+<div id="test">test</div>
+</div>
 </body>
 </html>
