--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -13,6 +13,24 @@
 
 <body>
 
+	<!-- divrect -->
+	<div id="divrect">
+		<div id="insideDOMRect">
+		<h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
+		<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<span class="testRect" id="rect2">F i n g e r p r i n t i n g ?</span>
+		</div>
+		<select class="testRect" id="rect3">
+		<option>&minus;&#1726;-</option>
+		</select>
+		<progress class="testRect" id="rect4">test</progress>
+		<button class="testRect" id="rect5"></button>
+	</div>
+
 	<img id="imageFS" width=0 height=0></img>
 	<!--offscreen-->
 	<div class="offscreen">
@@ -454,9 +472,7 @@
 		</th></tr></thead>
 		<tr><td><div>
 			<div class="btn-left"><button class="btn8 btn" onClick="outputSection(`8`, `c`, `m`)">[ re-run tests ]</button></div>
-			<div>canvas</div></div></td><td class="c mono" id="chash1"></td></tr>
-		<tr><td>[webgl] readPixels</td><td class="c mono readPixels"></td></tr>
-		<tr><td colspan="2" class="center">--- canvas ---</td></tr>
+			<div>hash</div></div></td><td class="c mono" id="chash1"></td></tr>
 		<tr><td>getContext</td><td class="c mono getContext"></td></tr>
 		<tr><td>toDataURL</td><td class="c mono toDataURL"></td></tr>
 		<tr><td>toBlob</td><td class="c mono toBlob"></td></tr>
@@ -467,6 +483,10 @@
 		<tr><td>isPointInStroke</td><td class="c mono isPointInStroke"></td></tr>
 		<tr><td>fillText</td><td class="c mono fillText"></td></tr>
 		<tr><td>strokeText</td><td class="c mono strokeText"></td></tr>
+		<tr><td colspan="2" class="center">--- webgl ---</td></tr>
+		<tr><td>getContext</td><td class="c mono" id="getContext2"></td></tr>
+		<tr><td>readPixels</td><td class="c mono readPixels"></td></tr>
+
 		<tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
 			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
@@ -863,6 +883,7 @@
 	<script src="js/devices.js"></script>
 	<script src="js/css.js"></script>
 	<script src="js/storage.js"></script>
+	<script src="js/domrect.js"></script>
 	<script src="js/misc.js"></script>
 	<script src="js/media.js"></script>
 	<!--slower-->
@@ -870,8 +891,6 @@
 	<script src="js/fonts.js"></script>
 	<script src="js/audio.js"></script>
 	<script src="js/webgl.js"></script>
-	<!--last-->
-	<script src="js/domrect.js"></script>
 
 	<!--500kb, load last-->
 	<link rel="stylesheet" type="text/css" href="css/media.css">
