--- a/iframes/domrect.html
+++ b/iframes/domrect.html
@@ -2,12 +2,12 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <head>
 <style>
-#divrect {
+#overlay {
   position: fixed;
   top: 10;
   left: 10;
 }
-#insideDOMRect{
+#inside{
 	white-space: nowrap;
 	color:#5B5B5B;
 	position: absolute;
@@ -40,8 +40,8 @@
 </head>
 
 <body>
-<div id="divrect">
-<div id="insideDOMRect">
+<div id="overlay">
+<div id="inside">
 <h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
 <span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
