--- a/iframes/domrect.html
+++ b/iframes/domrect.html
@@ -4,8 +4,9 @@
 <style>
 #overlay {
   position: fixed;
-  top: 10;
-  left: 10;
+  top: 0;
+  left: 0;
+	padding: 8px;
 }
 #inside{
 	white-space: nowrap;
