--- a/extra.html
+++ b/extra.html
@@ -133,10 +133,10 @@
 				<label for="collapseF" class="lbl-toggle" id="labelF">&#9660; show details</label>
 		</td></tr>
 		<!--WHITELIST: c2-->
-		<tr class="togF"><td colspan="2" class="sub10" id="monsta_fontlabel">monsta</td>
+		<tr class="togF"><td colspan="2" class="s5" id="monsta_fontlabel">monsta</td>
 			<td><button class="btn0 btn" onClick="copyclip(`small_fontFPJS2Found`)">[ copy to clipboard ]</button></td></tr>
 		<tr class="togF"><td></td><td colspan="2" class="intro" id="monsta_fontFPJS2Found"></td></tr>
-		<tr id="fontF1" class="togF1"><td colspan="2" class="sub10">font fallback [monsta]</td>
+		<tr id="fontF1" class="togF1"><td colspan="2" class="s5">font fallback [monsta]</td>
 			<td><button class="btn0 btn" onClick="copyclip(`small_fontFBFound`)">[ copy to clipboard ]</button></td></tr>
 		<tr id="fontF2" class="togF1"><td></td><td colspan="2" class="intro" id="monsta_fontFBFound"></td></tr>
 		<!--CREDITS-->
