--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -844,8 +844,10 @@
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">svg.disabled</span></div>
 			&nbsp svg</td><td class="c" id="svgBasicTest"></td></tr>
-		<tr><td colspan="2">[performance.now] timing</td><td class="c" id="rfpperf"></td></tr>
-		<tr><td colspan="2">[PerformanceNavigationTiming] timing</td><td class="c" id="rfpperf2"></td></tr>
+		<tr><td colspan="2">[getEntries*] performance.mark</td><td class="c" id="perf1"></td></tr>
+		<tr><td colspan="2">performance.now</td><td class="c" id="perf2"></td></tr>
+		<tr><td colspan="2">[loadEventEnd] performance.timing</td><td class="c" id="perf3"></td></tr>
+		<tr><td colspan="2">PerformanceNavigationTiming</td><td class="c" id="perf4"></td></tr>
 		<tr><td colspan="2"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">javascript.options.wasm</span></div>
 			&nbsp webassembly</td><td class="c" id="wasm"></td></tr>
