--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -341,7 +341,7 @@
 		<tr class="togL" colspan="2"><td></td></tr>
 	</table>
 
-	<!--headers.js-->
+	<!--language.js-->
 	<table id="tb5">
 		<col width="50%"><a name="headers"></a><col width="50%">
 		<thead><tr><th colspan="2">
@@ -885,7 +885,6 @@
 	<script src="js/screen.js"></script>
 	<!--faster-->
 	<script src="js/language.js"></script>
-	<script src="js/headers.js"></script>
 	<script src="js/devices.js"></script>
 	<script src="js/css.js"></script>
 	<script src="js/storage.js"></script>
