--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -4,13 +4,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>TZP</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script src="js/generic.js"></script>
 	<script src="js/globals.js"></script>
+	<script src="js/generic.js"></script>
 </head>
 
 <body>
-
-	<!-- divrect -->
+	<!-- domrect -->
 	<div id="divrect">
 		<div id="insideDOMRect">
 		<h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
