--- a/newwin.html
+++ b/newwin.html
@@ -8,5 +8,6 @@
 <body>
 <br><br><center><p>Hey! You're here because you tested what a new window malicious size could leak.</p>
 <p>Close this and refer back to the results on the main test.</p></center><br><br>
+<div class="hidden"><iframe src=""></iframe><div>
 </body>
 </html>
